WID - 871 - Setup of DB, Static files, Selenium test, IP address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ webapp:
   build: .
   volumes:
     - .:/opt/django_project
+    - ./static:/opt/django_project/webapp/static
   ports:
     - "80:80"
 
