--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 selenium
 git+ssh://git@gitlab.alfresco.com/python-modules/alfresco-license-generators.git
+requests==0.11.1
+python-dateutil==2.4.2
