Added redis as session cache

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,5 +4,7 @@ psycopg2==2.6
 selenium
 python-dateutil
 requests
+redis
+django-redis-cache
 git+ssh://git@gitlab.alfresco.com/python-modules/alfresco-license-generators.git
 git+ssh://git@gitlab.alfresco.com/python-modules/datadog-logger.git
